[package]
name = "nom-sql"
version = "0.0.1"
authors = ["Thomas Radloff <bostontrader@gmail.com","Malte Schwarzkopf <malte@csail.mit.edu>"]

homepage = "https://github.com/bostontrader/nom-sql"
repository = "https://github.com/bostontrader/nom-sql.git"

description = "A SQL parser written using nom, hobbled for safety."

license = "MIT"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
nom = "5.0.1"

[dev-dependencies]
pretty_assertions = "0.5.1"
